{
  "version": 4,
  "terraform_version": "0.12.24",
  "serial": 153,
  "lineage": "7d442d50-0d18-5d7b-6278-4ae7793bce75",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "foo",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0015b9ef68c77328d",
            "arn": "arn:aws:ec2:us-east-1:863787955246:instance/i-06f678fde233185ba",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1b",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-06f678fde233185ba",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "deployer-key1",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0d43e7990a5d3fa59",
            "private_dns": "ip-10-0-1-4.ec2.internal",
            "private_ip": "10.0.1.4",
            "public_ip": "54.80.197.253",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-008ae1065f78bbae6",
                "volume_size": 10,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "sg-0d65f2b69e0946d39"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0ff418947c11f8b49",
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0d65f2b69e0946d39"
            ]
          },
          "dependencies": [
            "aws_key_pair.deployer",
            "aws_security_group.sc",
            "aws_subnet.local"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "igw-04f56e6e7dc194c9d",
            "owner_id": "863787955246",
            "tags": {
              "Name": "main"
            },
            "vpc_id": "vpc-07166d7cb0c7bfac4"
          },
          "dependencies": [
            "aws_vpc.local"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "route",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-09f8c8c1dbe0066b5",
            "owner_id": "863787955246",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-04f56e6e7dc194c9d",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "main"
            },
            "vpc_id": "vpc-07166d7cb0c7bfac4"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_vpc.local"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "a",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ae159d8179733c6d",
            "route_table_id": "rtb-09f8c8c1dbe0066b5",
            "subnet_id": "subnet-0ff418947c11f8b49"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.route",
            "aws_subnet.local",
            "aws_vpc.local"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sc",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:863787955246:security-group/sg-0d65f2b69e0946d39",
            "description": "Allow TLS inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0d65f2b69e0946d39",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "TLS from VPC",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "apache port number 80",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "allow_tls",
            "name_prefix": null,
            "owner_id": "863787955246",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "allow_tls"
            },
            "timeouts": null,
            "vpc_id": "vpc-07166d7cb0c7bfac4"
          },
          "dependencies": [
            "aws_vpc.local"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "local",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:863787955246:subnet/subnet-0ff418947c11f8b49",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.1.0/24",
            "id": "subnet-0ff418947c11f8b49",
            "map_public_ip_on_launch": true,
            "owner_id": "863787955246",
            "tags": {
              "Name": "Main"
            },
            "vpc_id": "vpc-07166d7cb0c7bfac4"
          },
          "dependencies": [
            "aws_vpc.local"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "local",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:863787955246:vpc/vpc-07166d7cb0c7bfac4",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0a4c92262b2654546",
            "default_route_table_id": "rtb-036a61982cebfc870",
            "default_security_group_id": "sg-0cf5a0575713ce1a9",
            "dhcp_options_id": "dopt-0a2874cf45d822166",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-07166d7cb0c7bfac4",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-036a61982cebfc870",
            "owner_id": "863787955246",
            "tags": {
              "Name": "main"
            }
          }
        }
      ]
    }
  ]
}